fixing events list on mobile with media query

--- a/src/frontend/assets/css/events.css
+++ b/src/frontend/assets/css/events.css
@@ -27,6 +27,7 @@
   border: none;
   border-bottom: 2px solid green;
   color: green;
+  padding: 10px 40px;
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -135,5 +136,39 @@
     -moz-transform: translateY(0);
     -ms-transform: translateY(0);
     -o-transform: translateY(0);
+  }
+}
+
+@media (max-width: 767px) {
+  .filter-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .filter-container .filter-group {
+    margin-left: 0;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .filter-group .btn {
+    margin-bottom: 10px;
+  }
+  .events-list {
+    padding: 0;
+  }
+  .event-item {
+    padding: 20px;
+  }
+  .event-item .image-col {
+    padding-left: 20px;
+  }
+  .event-item .event-title {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .event-title .is-held {
+    margin-top: 10px;
+  }
+  .event-item img {
+    height: 100%;
   }
 }
